[project]
name = "gkvalves"
description = "Gorod Krovi valve step solver."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ivan Luengo" }]
dynamic = ["version"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["build>=0.10.0,<=1.2.1", "wheel>=0.36.2,<=0.43"]

[project.urls]
Source = "https://github.com/luengoc/gkvalves/"
Issues = "https://github.com/luengoc/gkvalves/issues/"

[project.scripts]
gkvalves = "gkvalves.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "gkvalves.VERSION" }

[tool.setuptools.packages.find]
include = ["gkvalves*"]
